src/style.css
/***** COLOR VARIABLES *****/

:root {
    --deep-indigo: #30325d;
    --smokey-indigo: #626288;
    --light-indigo: #d8d8dc;
    --sunshine-orange: #cb975d;
    --light-sunshine: #f6dfca;
    --cream: #fcf2e7;
}

/***** FONT STYLES *****/

h1{
    font-size: 30px;
    font-weight: 800;
    color: var(--deep-indigo);
    font-family: Poppins, sans-serif;
    margin: 0;
}

h2{
    font-size: 60px;
    font-weight: 700;
    color: var(--smokey-indigo);
    font-family: 'Lora', serif;
}

h3{
    color: var(--deep-indigo);
    font-size: 30pt;
    font-family: 'Lora', serif;
}

h4{
    color: var(--deep-indigo);
    font-size: 20px;
    font-family: Poppins, sans-serif;
}

p{
    color: var(--smokey-indigo);
    font-size: 18px;
    line-height: 30px;
    text-justify: distribute;
    font-family: Poppins, sans-serif;
}

/***** BASE STYLES *****/

.button{
    color: var(--cream);
    background-color: var(--smokey-indigo);
    padding: 10px;
    border: solid 2px var(--smokey-indigo);
    border-radius: 12px;
    font-size: 20px;
    font-family: Poppins, sans-serif;
    text-transform: uppercase;
    font-weight: bolder;
    margin: 2%;
    text-decoration: none;
}

.button:hover {
    background-color: var(--deep-indigo);
}

span{
    color: var(--sunshine-orange);
}

.app{
    background-color: var(--cream);
    overflow: hidden;
}

body {
    margin: 0;
    background-color: var(--deep-indigo);
}

/***** GRID *****/

.full-width{
    width: 80%;
    float: left;
    margin: 0 auto;
    padding-left: 10%;
    padding-right: 10%;
    clear: both;
    overflow: hidden;
    overflow-inline: hidden;
}

.half-width{
    width: 50%;
    float: left;
}

.centered {
    align-content: center;
    justify-content: center;
    margin: 0 auto;
    text-align: center;
}

/*.third-width{*/
/*    width: 33%;*/
/*    float: left;*/
/*    !*overflow: auto;*!*/
/*}*/

.pull-quote{
    width: 100%;
    float: left;
    clear: both;
}

footer{
    clear: both;
}
/***** HEADER STYLES *****/

header .full-width{
    padding-top: 5%;
    padding-bottom: 5%;
}
nav{
    float: right;
}
nav ul{
    margin: 0;
}
nav ul li{
    display: inline-block;
}
nav ul li a{
    text-transform: uppercase;
    text-decoration: none;
    font-size: 25px;
    font-family: Poppins, sans-serif;
    font-weight: bolder;
    color: var(--smokey-indigo);
    padding-right: 50px;
}

nav ul li a:hover{
    color: var(--deep-indigo);
}

header h2{
    padding-top: 5%;
}

/***** ABOUT SECTION STYLES *****/

/*#about .full-width{*/
/*    padding-top: 5%;*/
/*    padding-bottom: 5%;*/
/*    background-color: var(--light-sunshine);*/
/*    !*margin-right: 10%;*!*/
/*}*/
/*#about h3{*/
/*    margin-bottom: 2%;*/
/*    margin-top: 0;*/
/*}*/
/*#about h4{*/
/*    text-align: center;*/
/*    padding-left: 2%;*/
/*    padding-right: 2%;*/
/*}*/
/*#about p{*/
/*    text-align: center;*/
/*    padding-left: 10%;*/
/*    padding-right: 10%;*/
/*    padding-bottom: 2%;*/
/*    !*padding-right: 20%;*!*/
/*}*/

/***** DONATE SECTION STYLES *****/

#donate .full-width {
    padding-top: 5%;
    padding-bottom: 5%;
    background-color: var(--light-sunshine);
}
#donate h3{
    margin: 0;
}

#donate .button{
    display: inline-block;
}

/***** MAP SECTION STYLES *****/

#map .full-width {
    padding-top: 5%;
    padding-bottom: 5%;
    background-color: var(--light-indigo);
}
#map h3{
    margin: 0;
}

.map-link {
    color: var(--deep-indigo);
    text-decoration: none;
}

.map-link:hover{
    color: var(--smokey-indigo);
}

#map .button{
    display: inline-block;
}

/***** FOOTER STYLES *****/

#footer .full-width{
    background-color: var(--deep-indigo);
    padding: 2%;
    width: 100%;
}
#footer p a{
    float: right;
    text-decoration: none;
    font-family: Poppins, sans-serif;
    font-weight: bold;
    color: var(--cream);
    margin-right: 10%;
}

